--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .app-header {
-    background-color: #0a1a2d;
+    background-color: #464c60;
     color: #fff;
     width: 100%;
     margin-bottom: 20px;
@@ -38,7 +38,7 @@
 .app-block {
     padding: 20px;
     margin: 20px;
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
