--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #112d49;
+    background-color: #dae8f6;
 }
 
 code {
